<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/edit_text_size"
        android:gravity="end"
        android:layout_marginTop="@dimen/edit_text_margin"
        android:hint="@string/edit_text_hint"
        android:layout_marginBottom="@dimen/edit_text_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_row_height"
        android:layout_above="@+id/row2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clearButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="@dimen/button_text_size"
            android:layout_weight="3"
            android:text="@string/clear_button_text"
            android:layout_margin="@dimen/button_margin"/>

        <Button
            android:id="@+id/divideButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="@dimen/button_text_size"
            android:layout_weight="1"
            android:text="@string/divide_button_text"
            android:layout_margin="@dimen/button_margin"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_row_height"
        android:orientation="horizontal"
        android:layout_above="@+id/row3">

        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/button7_text"
            android:textSize="@dimen/button_text_size"/>

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button8_text"
            android:layout_margin="@dimen/button_margin"
            android:textSize="@dimen/button_text_size"/>

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/button9_text"
            android:textSize="@dimen/button_text_size"/>

        <Button
            android:id="@+id/multiplyButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/multiplyButton_text"
            android:textSize="@dimen/button_text_size"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_row_height"
        android:layout_above="@+id/row4"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/button4_text"
            android:textSize="@dimen/button_text_size"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/button5_text"
            android:textSize="@dimen/button_text_size"/>

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/button6_text"
            android:textSize="@dimen/button_text_size"/>

        <Button
            android:id="@+id/subtractButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/subtractButton_text"
            android:layout_margin="@dimen/button_margin"
            android:textSize="@dimen/button_text_size"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_row_height"
        android:orientation="horizontal"
        android:layout_above="@+id/row5">

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button1_text"
            android:layout_margin="@dimen/button_margin"
            android:textSize="@dimen/button_text_size"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button2_text"
            android:layout_margin="@dimen/button_margin"
            android:textSize="@dimen/button_text_size"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/button3_text"
            android:textSize="@dimen/button_text_size"/>

        <Button
            android:id="@+id/addButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/addButton_text"
            android:layout_margin="@dimen/button_margin"
            android:textSize="@dimen/button_text_size"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_row_height"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/button0_text"
            android:textSize="@dimen/button_text_size"/>

        <Button
            android:id="@+id/dotButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/dotButton_text"
            android:textSize="@dimen/button_text_size"/>

        <Button
            android:id="@+id/equalButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/equalButton_text"
            android:layout_margin="@dimen/button_margin"
            android:textSize="@dimen/button_text_size"/>
    </LinearLayout>

</RelativeLayout>
